--- a/myapp/templates/commissioner.html
+++ b/myapp/templates/commissioner.html
@@ -28,35 +28,19 @@
 
     <!-- Stats Cards -->
     <div class="row mb-4">
-      <div class="col-md-3">
+      <div class="col-md-6">
         <div class="card text-white bg-primary shadow-sm">
           <div class="card-body">
             <h5 class="card-title">Total Inspectors</h5>
-            <h3>5</h3>
+            <h3>{{inlen}}</h3>
           </div>
         </div>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-6">
         <div class="card text-white bg-secondary shadow-sm">
           <div class="card-body">
             <h5 class="card-title">Total Constables</h5>
             <h3>20</h3>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="card text-white bg-warning shadow-sm">
-          <div class="card-body">
-            <h5 class="card-title">Pending FIRs</h5>
-            <h3>8</h3>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="card text-white bg-success shadow-sm">
-          <div class="card-body">
-            <h5 class="card-title">Closed Cases</h5>
-            <h3>12</h3>
           </div>
         </div>
       </div>
