complate E-police station project

--- a/myapp/templates/login.html
+++ b/myapp/templates/login.html
@@ -14,9 +14,26 @@
     {{msg}}
   </div>
   {% endif %}
+
+
   <div class="container mt-5">
     <div class="row justify-content-center">
       <div class="col-md-5">
+        
+          <div>
+            <h6>citizen</h6>
+            <b>email</b> : divyeshjethva2004@gmail.com <br>
+            <b>password</b> : d
+            <p>---------------------------</p>
+            <h6>inspector</h6>
+            <b>email</b> : u@gmail.com <br>
+            <b>password</b> : u
+            <p>---------------------------</p>
+            <h6>commissioner</h6>
+            <b>email</b> : a@gmail.com<br>
+            <b>password</b> : a
+          </div>
+
         <div class="card shadow-lg border-0 rounded-3">
           <div class="card-header bg-primary text-white text-center">
             <h4>Citizen Login</h4>
